fix: add text alignment
- text-align: center

--- a/foundations/05-descendant-combinator/style.css
+++ b/foundations/05-descendant-combinator/style.css
@@ -2,4 +2,5 @@
   background-color: #ffff00;
   color: #ff0000;
   font-size: 20px;
+  text-align: center;
 }
